Fixed not showing latest youtube video

--- a/style.css
+++ b/style.css
@@ -1607,7 +1607,6 @@ button.normal {
 .links img {
   width: 25px;
   height: 25px;
-  margin-right: 15px;
 }
 #partneri .links img,
 #linkovi .links img {
